macros/tests/ui/fail_missing_name.stderr
error: missing required attribute `name`
 --> tests/ui/fail_missing_name.rs:3:1
  |
3 | #[app_cached(ttl = 60)]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `app_cached` (in Nightly builds, run with -Z macro-backtrace for more info)
